# fsoft2026_1DA_1

./: .gitignore  CMakeLists.txt
GamesPlatform/: readme.md
GamesPlatform/MaiorOuMenor/: MaiorOuMenor.cpp  MaiorOuMenor.h
Iteração1/: Diagrama de Caso (Jogador).drawio  Diagrama de Dominio (final).drawio  Especificações dos Casos de Uso.docx  MenuFluxograma.drawio
Iteração1/Relatório Final/: fsoft2026_1DA_1_TR1.doc
